--- a/templates/components/nav-bar.html.twig
+++ b/templates/components/nav-bar.html.twig
@@ -10,20 +10,36 @@
 					<a class="nav-link active" aria-current="page" href="/">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="{{path("admin")}}">Admin</a>
-				</li>
-				<li class="nav-item">
 					<a class="nav-link active" aria-current="page" href="{{path("offers.list")}}">Offres</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="{{path("admin.contracts.create")}}">create contract</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="{{path("admin.contractTypes.create")}}">create contractType</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link active" aria-current="page" href="{{path("admin.offers.create")}}">create offer</a>
-				</li>
+
+				{% if not is_granted("IS_AUTHENTICATED_FULLY") %}
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="{{path("security.register")}}">Register</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="{{path("security.login")}}">Login</a>
+					</li>
+				{% endif %}
+				{% if is_granted("IS_AUTHENTICATED_FULLY") %}
+					{% if is_granted("ROLE_ADMIN") %}
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{path("admin")}}">Admin</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{path("admin.contracts.create")}}">create contract</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{path("admin.contractTypes.create")}}">create contractType</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="{{path("admin.offers.create")}}">create offer</a>
+						</li>
+					{% endif %}
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="{{path("security.logout")}}">logout</a>
+					</li>
+				{% endif %}
 
 			</ul>
 			<form class="d-flex">
